[package]
name = "pic32mx274fxxxb"
version = "0.1.0"
description = "Peripheral access API for PIC32MX274 (28/44 pin) microcontrollers"
keywords = ["no-std", "mips", "pic32", "svd2rust"]
license = "MIT"
authors = ["Kiffie van Haash"]
edition = "2018"

[dependencies]
bare-metal = "0.2.0"
vcell = "0.1.0"
