[package]
name = "pic32mx2xx"
version = "0.7.0"
description = "Peripheral access API for PIC32MX1/2xx microcontrollers"
repository = "https://github.com/kiffie/pic32-pac/tree/master/pic32mx2xx"
keywords = ["no-std", "mips", "pic32", "svd2rust"]
license = "MIT OR Apache-2.0"
authors = ["Stephan <kiffie@mailbox.org>"]
edition = "2018"
include = ["README.md", "/src", "/build.rs"]

[features]
rt = ["mips-rt"]
critical-section = ["dep:critical-section"]
pic32mx1xxfxxxb = []
pic32mx1xxfxxxc = []
pic32mx1xxfxxxd = []
pic32mx2xxfxxxb = []
pic32mx2xxfxxxc = []
pic32mx2xxfxxxd = []
pic32mx1x4fxxxb = []
pic32mx1x4fxxxd = []
pic32mx2x4fxxxb = []
pic32mx2x4fxxxd = []

[dependencies]
vcell = "0.1.3"
mips-rt = { version = "0.3.0", optional = true }
critical-section = { version = "1.0.0", optional = true }

[package.metadata.docs.rs]
features = ["rt", "critical-section", "pic32mx2xxfxxxd"]
