[package]
name = "pic32mx2xxfxxxb"
version = "0.1.0"
description = "Peripheral access API for PIC32MX2xx (28 pin) microcontrollers"
repository = "https://github.com/kiffie/pic32-pac"
keywords = ["no-std", "mips", "pic32"]
license = "MIT"
authors = ["Stephan <kiffie@mailbox.org>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.4"
vcell = "0.1.2"
