[package]
name = "pic32mx4xxfxxxh"
version = "0.1.0"
description = "Peripheral access API for PIC32MX4xx (100 pin) microcontrollers"
keywords = ["no-std", "mips", "pic32"]
license = "MIT"
authors = ["Kiffie van Haash <kiffie.vanhaash@gmail.com>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.0"
vcell = "0.1.0"
