[package]
name = "pic32mx567"
version = "0.1.0"
description = "Peripheral access API for PIC32MX5xx/6xx/7xx microcontrollers"
repository = "https://github.com/kiffie/pic32-pac"
keywords = ["no-std", "mips", "pic32", "svd2rust"]
license = "MIT OR Apache-2.0"
authors = ["Stephan <kiffie@mailbox.org>"]
edition = "2021"
include = ["README.md", "/src", "/build.rs"]

[features]
rt = ["mips-rt"]
pic32mx695fxxxl = []

[dependencies]
vcell = "0.1.3"
mips-mcu = "0.2.0"
mips-rt = { version = "0.3.0", optional = true }

[package.metadata.docs.rs]
features = ["rt", "pic32mx695fxxxl"]
